modules/gdscript/tests/scripts/analyzer/errors/return_incompatible_ternary_type.gd
func test() -> int:
	return "test" if randf() < 0.5 else 1
